<resources>
    <string name="app_name">SuperSafe</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>
    <string name="sign_in_by_oauth">Sign In Google By Oauth</string>
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>
    <string name="server_client_id">789377331744-tmo35q55ba00kn55213q9od4cutk3vt3.apps.googleusercontent.com</string>
    <string name="download_progress">Download Progress:</string>
    <string name="menu_settings">Settings</string>
    <string name="button_subscribe">Listen for Changes</string>
    <string name="button_unsubscribe">Stop Listening for Changes</string>
    <string name="file_created">Created file: %1$s.</string>
    <string name="access_token">Bearer %1$s</string>
    <string name="file_create_error">Error while trying to create the file.</string>
    <string name="folder_create_error">Error while trying to create the folder</string>
    <string name="select_folder">Select a folder</string>
    <string name="select_file">Select file</string>
    <string name="custom_property_deleted">Custom properties successfully deleted.</string>
    <string name="update_failed">Unable to update file.</string>
    <string name="change_event">File change event: %1$s</string>
    <string name="tickle_finished">Finished tickling. Restart watch to resume.</string>
    <string name="content_updated">Successfully edited contents.</string>
    <string name="content_update_failed">Error while editing contents.</string>
    <string name="metadata_updated">Successfully updated metadata.</string>
    <string name="custom_property_updated">Custom property successfully inserted or updated.</string>
    <string name="file_not_pinnable">File is not pinnable.</string>
    <string name="file_already_pinned">File is already pinned.</string>
    <string name="query_failed">Problem while retrieving files.</string>
    <string name="query_successful">Query successful</string>
    <string name="read_failed">Error while retrieving file.</string>
    <string name="metadata_retrieved">Metadata successfully fetched. Title: %1$s</string>
    <string name="content_loaded">File contents successfully read.</string>
    <string name="file_deleted">File deleted.</string>
    <string name="delete_failed">Unable to delete file.</string>
    <string name="subscribed">Subscribed.</string>
    <string name="unsubscribed">Unsubscribed.</string>
    <string name="init_failed">Unable to initialize activity.</string>
    <string name="file_not_selected">No file selected, can not continue.</string>
    <string name="folder_not_selected">No folder selected, can not continue.</string>
    <string name="move_to_album">Move to album</string>
    <string name="new_album">New Album</string>
    <string name="enter_name">Enter name</string>
    <string name="me">ME</string>
    <string name="privates">PRIVATE</string>
    <string name="need_signed_in_to_google_drive_before_using_this_feature">Please connect to YOUR GOOGLE DRIVE before to use this feature</string>
    <string name="label_custom_color">Custom colors</string>
    <string name="label_custom_theme">Custom theme</string>
    <string name="label_add_action">Add action</string>
    <string name="label_replace_action">Replace action</string>
    <string name="label_remove_action">Remove action</string>
    <string name="camera">Take photo</string>
    <string name="photo">Import photos</string>
    <string name="album">Add album</string>
    <string name="select_album">Select Album</string>
    <string name="grant_access">GRANT ACCESS</string>
    <string name="keep_safety">SuperSafe needs access to your file storage</string>
    <string name="allow">This allows Supersafe to access and encrypt your photos or videos.</string>
    <string name="exit">EXIT</string>
    <string name="login">SIGN IN with your Super Safe account email</string>
    <string name="email">Email</string>
    <string name="next">NEXT</string>
    <string name="change">Change</string>
    <string name="generate_secret_pin">Generate secret pin</string>
    <string name="confirm">Confirm</string>
    <string name="internet">Please check your connections</string>
    <string name="yes">YES</string>
    <string name="verify_title">Check %1$s for an access code to sign in</string>
    <string name="code">Access code</string>
    <string name="checking_your_email">Checking your email: %1$s</string>
    <string name="waiting_left">Count down left: %1$s</string>
    <string name="login_action">SIGN IN</string>
    <string name="resend">RESEND CODE</string>
    <string name="sign_up">SIGN UP HERE</string>
    <string name="key_sign_up">Sign Up</string>
    <string name="key_sign_in">Sign In</string>
    <string name="welcome">Welcome to SuperSafe</string>
    <string name="safe_detail">A safe place for your photos or videos</string>
    <string name="title_forget">Add an email in the case you forget PIN</string>
    <string name="name">Name</string>
    <string name="finish">Finish</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="secret_pin">Secret Pin</string>
    <string name="change_secret_pin">Change Secret Pin</string>
    <string name="wrong_secret_pin">Wrong secret pin</string>
    <string name="server_error_occurred">Server error occurred</string>
    <string name="no_connection">No connection. Please check your internet connection</string>
    <string name="pinlock_title">Enter Pin Code</string>
    <string name="pinlock_settitle">Set Pin Code</string>
    <string name="pinlock_firsttry">Wrong Pin Code: First Try</string>
    <string name="pinlock_secondtry">Wrong Pin Code: Second Try</string>
    <string name="pinlock_wrongpin">Wrong Pin code</string>
    <string name="pinlock_secondPin">Enter Pin Code Again</string>
    <string name="pinlock_original_fake_pin_not_the_same">Original and Fake PIN Is Not The Same</string>
    <string name="pinlock_tryagain">Pin Codes Are Not The Same</string>
    <string name="pinlock_fingerprint">Use Fingerprint</string>
    <string name="pinlock_confirm_your_pin">Please confirm your pin to continue</string>
    <string name="pinlock_confirm_create">Create a PIN to lock your vault</string>
    <string name="pin_lock_replace">Your fake PIN cannot start with your real PIN, or Your real PIN cannot start with your fake PIN.</string>
    <string name="send_verification_code">SEND VERIFICATION CODE</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="audio">Audios</string>
    <string name="done">Done</string>
    <string name="forgot_your_pin">Forgot your pin? No problem. Here\'s how to reset it</string>
    <string name="step_1">Step 1:</string>
    <string name="step_2">Step 2:</string>
    <string name="request_an_access_code">Request an account code. We\'ll send it to your primary email address: %1$s</string>
    <string name="request_enter_code">Enter the access code below. We\'ll begin the reset process so you can create a new PIN</string>
    <string name="access_code">Access code</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="successful_percent">100 %</string>
    <string name="system_scan_complete">System scan complete</string>
    <string name="threats_detected">0 threats detected</string>
    <string name="status_ok">status: OK</string>
    <string name="key_name">name</string>
    <string name="key_fingerprint_unlock">Fingerprint unlock</string>
    <string name="key_fingerprint_unlock_detail">If enabled, you can still use PIN</string>
    <string name="key_album_cover">Album Cover</string>
    <string name="key_custom">Custom</string>
    <string name="key_general">General</string>
    <string name="key_features">Features</string>
    <string name="key_lock_screen">Lock screen &amp; security</string>
    <string name="key_private_cloud">Private Cloud</string>
    <string name="key_album_lock">Album Lock</string>
    <string name="key_change_pin">Change PIN</string>
    <string name="key_face_down_lock">Face down lock</string>
    <string name="key_face_down_lock_detail">When you place your phone face down, SuperSafe will automatically close and lock itself.</string>
    <string name="album_lock">Album Lock</string>
    <string name="no_limited_cloud_sync_storage">No limited Cloud sync storage</string>
    <string name="Remove_upload_limit_of_100_files_per_month">Remove upload limit of 50 files per month</string>
    <string name="happy">If you are happy with this app, please rate us and let us know what SuperSafe help you</string>
    <string name="unhappy">If you are unhappy, please send us feedback about your issues. We need your support in order to make SuperSafe better.</string>
    <string name="thank_you_feedback">Thank You for using our services</string>
    <string name="i_love_it">I love it</string>
    <string name="report_problem">Report problem</string>
    <string name="use_every_feature">Use every feature</string>
    <string name="it_top_shelf_supersafe">It\'s top-shelf SuperSafe</string>
    <string name="trash_recovery">Trash recovery</string>
    <string name="trash_recovery_detail">Get deleted items back.</string>
    <string name="no_advertisement">No advertisements</string>
    <string name="get_rid_of_those_ugly_ads">Get rid of those ugly ads!</string>
</resources>