<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <co.tpcreative.supersafe.common.preference.MyPreferenceCategory android:title="@string/key_lock_screen"
        android:layout="@layout/preference_category_layout">
        <co.tpcreative.supersafe.common.preference.MyPreference
            android:layout="@layout/custom_preferences_item"
            android:key="@string/key_change_pin"
            android:title="@string/key_change_pin"/>


        <co.tpcreative.supersafe.common.preference.MySwitchPreference
            android:layout="@layout/custom_preferences_item"
            android:key="@string/key_face_down_lock"
            android:summary="@string/key_face_down_lock_detail"
            android:title="@string/key_face_down_lock"/>

        <co.tpcreative.supersafe.common.preference.MySwitchPreference
            android:layout="@layout/custom_preferences_item"
            android:key="@string/key_fingerprint_unlock"
            android:summary="@string/key_fingerprint_unlock_detail"
            android:title="@string/key_fingerprint_unlock"/>



    </co.tpcreative.supersafe.common.preference.MyPreferenceCategory>
</android.support.v7.preference.PreferenceScreen>