<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_gray_100"
    tools:context=".ui.resetpin.ResetPinActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_collapseMode="pin" />
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/material_gray_800"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/forgot_your_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="@dimen/text_size_normal"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:text="@string/step_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvStep1"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/request_an_access_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:textColor="@color/white"
                android:text="@string/send_verification_code"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/bg_button_rounded"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_high" />

            <TextView
                android:textSize="@dimen/text_size_normal"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:text="@string/step_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvStep2"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/request_enter_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_marginTop="20dp"
                android:id="@+id/edtAccessCode"
                android:textSize="@dimen/text_size_normal"
                android:hint="@string/access_code"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionNext"
                style="@style/RegularTextView"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/material_gray_700"
                app:met_primaryColor="@color/colorButton"
                app:met_textColorHint="@color/colorButton"
                app:met_textColor="@color/material_gray_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:enabled="false"
                android:textColor="@color/white"
                android:text="@string/reset_pin"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/bg_button_disable_rounded"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_high"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>