<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/material_gray_700"
            android:textSize="@dimen/small"
            android:id="@+id/tvHappy"
            android:text="@string/happy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/material_gray_700"
            android:textSize="@dimen/small"
            android:id="@+id/tvUnhappy"
            android:text="@string/unhappy"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:textColor="@color/material_gray_700"
            android:textSize="@dimen/small"
            android:text="@string/thank_you_feedback"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:visibility="gone"
            android:background="@color/light_green_a700"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/icon_size_30"
                android:layout_height="@dimen/icon_size_30"/>
            <Button
                android:textSize="@dimen/medium_16"
                android:id="@+id/btnILoveIt"
                android:textColor="@color/white"
                android:padding="5dp"
                android:gravity="left|center"
                android:text="@string/i_love_it"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_high" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:background="@color/ColorRedV1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/icon_size_30"
                android:layout_height="@dimen/icon_size_30"/>
            <Button
                android:textSize="@dimen/medium_16"
                android:id="@+id/btnReportProblem"
                android:textColor="@color/white"
                android:padding="5dp"
                android:gravity="left|center"
                android:text="@string/report_problem"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_high" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>