<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.askpermission.AskPermissionAct">
    <RelativeLayout
        android:background="@color/colorBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_launcher"
            android:layout_width="80dp"
            android:layout_height="80dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xlarge"
                android:text="@string/keep_safety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginBottom="50dp"
                android:textColor="@color/colorTextDark"
                android:textSize="@dimen/text_size_large"
                android:text="@string/allow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginBottom="10dp"
                android:id="@+id/btnGrantAccess"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/white"
                android:background="@drawable/bg_button_rounded"
                android:text="@string/grant_access"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_high" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnExit"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorButtonDark"
                android:background="@null"
                android:text="@string/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>