<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_item"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <co.tpcreative.supersafe.common.views.SquaredImageView
            android:layout_gravity="center"
            android:id="@+id/image"
            android:layout_width="@dimen/image_size_custom"
            android:layout_height="@dimen/image_size_custom"
            android:background="@color/photo_background_color"
            android:scaleType="centerInside"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">
            <TextView
                android:textSize="@dimen/text_size_normal"
                android:id="@+id/tvTitle"
                android:layout_marginBottom="5dp"
                android:text="@string/audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvPhotos"
                    android:text="@string/photos"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvVideos"
                    android:text="@string/videos"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvAudios"
                    android:text="@string/audio"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
